--- a/src/pages/add-workout/add-workout.html
+++ b/src/pages/add-workout/add-workout.html
@@ -7,5 +7,29 @@
 </ion-header>
 
 <ion-content padding>
-
+    <form (submit)="onSubmit">
+        <ion-list>
+            <ion-item>
+                <ion-label fixed>Title</ion-label>
+                <ion-input [(ngModel)]="title" name="title" type="text"></ion-input>
+            </ion-item>
+            <ion-item>
+                <ion-label fixed>Note</ion-label>
+                <ion-input [(ngModel)]="note" name="note" type="textarea"></ion-input>
+            </ion-item>
+            <ion-item>
+                <ion-label fixed>Type</ion-label>
+                <ion-select [(ngModel)]="type" name="type">
+                    <ion-option value="Cardio">Cardio</ion-option>
+                    <ion-option value="Weight Training">Weight Training</ion-option>
+                    <ion-option value="Pylometrics">Pylometrics</ion-option>
+                    <ion-option value="Aerobics">Aerobics</ion-option>
+                    <ion-option value="Sports">Sports</ion-option>
+                </ion-select>
+            </ion-item>
+            <ion-item>
+                <button ion-button type="submit" block>Add Workout</button>
+            </ion-item>
+        </ion-list>
+    </form>
 </ion-content>
