Fix Add Workout Errors

--- a/src/pages/add-workout/add-workout.html
+++ b/src/pages/add-workout/add-workout.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 <ion-content padding>
-    <form (submit)="onSubmit">
+    <form (submit)="onSubmit()">
         <ion-list>
             <ion-item>
                 <ion-label fixed>Title</ion-label>
@@ -23,8 +23,8 @@
                     <ion-option value="Cardio">Cardio</ion-option>
                     <ion-option value="Weight Training">Weight Training</ion-option>
                     <ion-option value="Pylometrics">Pylometrics</ion-option>
-                    <ion-option value="Aerobics">Aerobics</ion-option>
-                    <ion-option value="Sports">Sports</ion-option>
+                    <ion-option value="Calisthenics">Calisthenics</ion-option>
+                    <ion-option value="Yoga and Pilates">Yoga and Pilates</ion-option>
                 </ion-select>
             </ion-item>
             <ion-item>
